--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
   
     <!-- The app component created in app.ts -->
-    <my-app></my-app>
+    <catstagram></catstagram>
     <script>System.import('app');</script>
     
   </body>
