--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
   <head>
 	<title>Angular 2 Quickstart</title>
+  <link href="stylesheets/app.css" media="screen, projection" rel="stylesheet" type="text/css" />
+         <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://github.jspm.io/jmcriffey/bower-traceur-runtime@0.0.87/traceur-runtime.js"></script>
 	<script src="https://jspm.io/system@0.16.js"></script>
+ <!--  // <script src="/Users/Yonet/tsExample/catsService.js"></script> -->
 	<script src="https://code.angularjs.org/2.0.0-alpha.28/angular2.dev.js"></script>
   </head>
   <body>
