--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
          <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://github.jspm.io/jmcriffey/bower-traceur-runtime@0.0.87/traceur-runtime.js"></script>
 	<script src="https://jspm.io/system@0.16.js"></script>
- 
   <script src="https://code.angularjs.org/2.0.0-alpha.32/angular2.dev.js"></script>
+  <script src="https://code.angularjs.org/2.0.0-alpha.32/router.dev.js"></script>
+  
   </head>
   <body>
   
