--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!-- index.html -->
 <html>
-  <head>
-	<title>Angular 2 Quickstart</title>
-  <link href="stylesheets/app.css" media="screen, projection" rel="stylesheet" type="text/css" />
-         <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
-	<script src="https://github.jspm.io/jmcriffey/bower-traceur-runtime@0.0.87/traceur-runtime.js"></script>
-	<script src="https://jspm.io/system@0.16.js"></script>
-  <script src="https://code.angularjs.org/2.0.0-alpha.32/angular2.dev.js"></script>
-  <script src="https://code.angularjs.org/2.0.0-alpha.32/router.dev.js"></script>
-  
-  </head>
-  <body>
-  
-    <!-- The app component created in app.ts -->
-    <catstagram></catstagram>
-    <script>System.import('app');</script>
-    
-  </body>
+	<head>
+		<meta name="description" content="ForwardJS 2015 Angular 2.0 Workshop">
+		<meta name="author" content="Aysegul Yonet">
+		<title>Angular 2 Quickstart</title>
+		<link href="stylesheets/app.css" media="screen, projection" rel="stylesheet" type="text/css" />
+		<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+		<script src="https://github.jspm.io/jmcriffey/bower-traceur-runtime@0.0.87/traceur-runtime.js"></script>
+		<script src="https://jspm.io/system@0.16.js"></script>
+		<script src="https://code.angularjs.org/2.0.0-alpha.32/angular2.dev.js"></script>
+		<script src="https://code.angularjs.org/2.0.0-alpha.32/router.dev.js"></script>
+	
+	</head>
+	<body>
+	
+		<!-- The app component created in app.ts -->
+		<catstagram></catstagram>
+		<script>System.import('app');</script>
+		
+	</body>
 </html>
